--- a/css/custom.css
+++ b/css/custom.css
@@ -129,12 +129,12 @@ ul {
     font-weight: 400;
 }
 #navbar ul.navbar-left-menu li a:hover {
-    background-color: #007197;
-    border-bottom: 3px solid #007197;
+    background-color: #e62117;
+    border-bottom: 3px solid #e62117;
     color: #fff!important;
 }
 #navbar ul.navbar-left-menu li.active a {
-    background-color: #007197;
+    background-color: #e62117;
     border-bottom: 3px solid #6CC049;
 }
 #navbar ul.navbar-left-menu li:last-child,
@@ -155,12 +155,18 @@ ul {
     color: #000;
 }
 
+
 .brandName span{
 	background: #e62117;
 	border-radius: 10px;
 	padding-right: 5px;
 	padding-left: 5px;
 	color: #fff;
+	box-shadow: 5px 5px 0px 0px #444444;
+}
+
+.brandName span:after {
+	
 }
 
 #main_icon {
@@ -619,9 +625,9 @@ select.form-control option{
     margin-right: 15px !important;
 }
 .btn-primary {
-    background-color: #007197;
+    background-color: #e62117;
     border-radius: 1px;
-    border: 1px solid #007197;
+    border: 1px solid #e62117;
     font-size: 14px;
     color: #FFFFFF;
 }
@@ -632,7 +638,7 @@ select.form-control option{
 .btn-disable.disabled {
     background-color: #00567C!important;
     border-radius: 1px;
-    border: 1px solid #007197!important;
+    border: 1px solid #e62117!important;
     font-size: 14px;
     color: #FFFFFF!important;
     opacity:1!important;
@@ -935,7 +941,7 @@ a.filterText:hover {
     margin: 0px!important;
 }
 .modal-title {
-   /* color: #007197!important;*/
+   /* color: #e62117!important;*/
     color: #0F7A9D!important;
     font-family: 'open sans semibold';
 }
@@ -989,7 +995,7 @@ a.custom-filterIcon {
 .popover-title {
     background-color: transparent!important;
     font-size: 24px;
-    color: #007197;
+    color: #e62117;
 }
 .popover.bottom {
     margin-top: -5px!important;
@@ -1053,7 +1059,7 @@ a.custom-filterIcon {
     box-shadow: inset 0 8px 8px -8px #696868, inset 0 -8px 8px -8px #696868;
 }
 #filterPophoverContent h2 {
-    color: #007197;
+    color: #e62117;
     border-bottom: 1px solid #ABABAB;
     margin-top: 10px;
     padding-bottom: 10px;
@@ -1235,7 +1241,7 @@ ul.filterCheckboxs li .checkbox {
 .dataTables_length {
     /*width:50% !important;*/
     margin-top :10px;
-    color:#007197; 
+    color:#e62117; 
     font-family:'open sans semibold';
     padding-left: 3px;
     padding-right: 3px;
@@ -1254,7 +1260,7 @@ ul.filterCheckboxs li .checkbox {
 .dataTables_wrapper .dataTables_info, 
 .dataTables_wrapper .dataTables_processing, 
 .dataTables_wrapper .dataTables_paginate{
-    color: #B2B2B2!important;
+    color: #444444!important;
 }
 .dataTables_paginate span .ellipsis{
     height: 34px;
@@ -1278,7 +1284,7 @@ ul.filterCheckboxs li .checkbox {
    padding-top: 0px; 
 }
 .valueStyle1 {
-    color:#007197; 
+    color:#e62117; 
     font-family:'open sans semibold';
     padding-left: 3px;
     padding-right: 3px;
@@ -1471,7 +1477,7 @@ input[type="checkbox"]:checked + label:after {
     padding: 6px 12px!important;
     margin-left: -1px!important;
     line-height: 1.42857143;
-    color: #007197;
+    color: #444444;
     text-decoration: none;
     background-color: #fff;
     border-radius: 0px!important;
@@ -1484,6 +1490,7 @@ input[type="checkbox"]:checked + label:after {
     margin: 0;
     padding: 0;
 }
+
 .dataTables_paginate .paginate_button,
 .paginate_button.previous,
 .paginate_button.next,
@@ -1491,42 +1498,28 @@ input[type="checkbox"]:checked + label:after {
 .paginate_button.last {
     margin: 0px!important;
     border: none!important;
-    border-left: 1px solid #ABABAB!important;
-    border-top: 1px solid #ABABAB!important;
-    border-bottom: 1px solid #ABABAB!important;
+    border-left: 1px solid #000 !important;
+    border-top: 1px solid #000 !important;
+    border-bottom: 1px solid #000 !important;
     margin: 0px!important;
-    background-color: #fff!important;
+    background-color: #fff !important;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
 }
+
 .dataTables_paginate span .paginate_button {
     border-radius: none!important;
 }
+
 .paginate_button.last {
-    border-right: 1px solid #ABABAB!important;
-    /*-webkit-border-top-right-radius: 3px 3px!important;
-    -moz-border-top-right-radius: 3px 3px!important;
-    border-border-top-right-radius: 3px 3px!important;
-    -webkit-border-bottom-right-radius: 3px 3px!important;
-    -moz-border-bottom-right-radius: 3px 3px!important;
-    border-border-bottom-right-radius: 3px 3px!important;*/
-}
-.paginate_button.first {
-    /*-webkit-border-top-left-radius: 3px 3px!important;
-    -moz-border-top-left-radius: 3px 3px!important;
-    border-border-top-left-radius: 3px 3px!important;
-    -webkit-border-bottom-left-radius: 3px 3px!important;
-    -moz-border-bottom-left-radius: 3px 3px!important;
-    border-border-bottom-left-radius: 3px 3px!important;*/
+    border-right: 1px solid #000 !important;
 }
 
-.dataTables_wrapper .dataTables_paginate .paginate_button{
-}
 .dataTables_wrapper .dataTables_paginate .paginate_button.current,
 .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover,
 .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
-    background: #007197!important;
+    background: #e62117 !important;
     color: #ffffff!important;
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button.next:hover,
@@ -1536,7 +1529,7 @@ input[type="checkbox"]:checked + label:after {
 .dataTables_wrapper .dataTables_paginate .paginate_button.last,
 .dataTables_wrapper .dataTables_paginate .paginate_button.previous {
     background: transparent!important;
-    color: #007197!important;
+    color: #e62117!important;
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button.next.disabled,
 .dataTables_wrapper .dataTables_paginate .paginate_button.previous.disabled,
@@ -1546,6 +1539,11 @@ input[type="checkbox"]:checked + label:after {
     background: transparent!important;
     color: #ababab!important;
 }
+
+.dataTables_paginate.paging_full_numbers {
+	padding-top : 20px;
+}
+
 /*Custom Data Table  End*/
 
 [ng\:cloak],
@@ -1733,7 +1731,7 @@ a.cke_button {
     border-bottom: 3px solid #ddd !important ;
 }
 table.dataTable tbody td:first-child {
-    border-left: 3px solid #fff!important;
+    border-left: 1px solid #000!important;
 }
 table.dataTable .trBorderLeft td:first-child {
     border-left: 3px solid #ababab !important;
@@ -2094,7 +2092,7 @@ a.gray:hover{
     margin-bottom: 10px!important;
 }
 .Darkblue {
-    color: #007197;
+    color: #e62117;
 }
 .mr2 {
     margin-right: 2px;
@@ -2591,7 +2589,7 @@ select option[disabled]:first-child {
 
 .rule_tbl_Style table {
     background: white;
-    border: 1px solid #B2B2B2;
+    border: 1px solid #444444;
     margin: 4px 5px;
 }
 
@@ -2601,12 +2599,12 @@ select option[disabled]:first-child {
     font-size: 24px;
     padding-left: 10px;
     padding-right: 10px;
-    border-right: 1px solid #b2b2b2;
+    border-right: 1px solid #444444;
     text-align: center;
 }
 
 .rules_checkCode {
-    border: 1px solid #B2B2B2;
+    border: 1px solid #444444;
     background: white;
     width: auto;
     padding: 7px;
@@ -2730,7 +2728,7 @@ select option[disabled]:first-child {
 
 .headerStyle {
     font-size: 24px;
-    color: #007197;
+    color: #e62117;
     padding-bottom: 5px;
     margin-top: 5px;
     position: relative; 
